# Raspberry-pi-camera

./: README.md
Mycam/: CMakeLists.txt  simpletest_raspicam.cpp
